src/test/ui/error-codes/E0109.stderr
error[E0109]: type parameters are not allowed on this type
  --> $DIR/E0109.rs:1:14
   |
LL | type X = u32<i32>; //~ ERROR E0109
   |              ^^^ type parameter not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0109`.
